--- a/navigation/index.html
+++ b/navigation/index.html
@@ -25,7 +25,6 @@
 
 
   <link rel="stylesheet" href="../main.css">
-  <script type="text/javascript" src="scripts.js"></script>
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
 
@@ -178,13 +177,16 @@
       <div class="blankHS"></div>
       <div class="Grid-cell">
         <div class="element"> <img class="cardAPPOINTA" src="../Placeholder.svg" alt="New User">
+          <h1 class="">Navigation design for case study</h1>
+
+          <div class="blankHXS"></div>
+
+          <h3 class="wrapper">Please scroll down to view the behavior</h3>
+          <div class="blankHXS"></div>
         </div>
       </div>
-      <h1 class="">Navigation design for case study</h1>
-      <div class="blankHXS"></div>
 
-      <h2 class="wrapper">Please scroll down to view the behavior</h2>
-      <div class="blankHS"></div>
+
 
     </div>
   </div>
@@ -194,57 +196,67 @@
     <div class="Grid Grid--gutters Grid--cols-2 wrapper">
       <div class="Grid-cell">
         <div class="element">
-  
-            <h3><strong>Opportunity</strong></h3>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </h4>
-  
+
+          <h3><strong>Main goal</strong></h3>
+
+
+          <h4>The goal of this navigation update is to present the design thinking process in a clear and logical
+            manner.
+
+          </h4>
+
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-  
-            <h3><strong>Solution</strong></h3>
-            <h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquam vestibulum morbi blandit cursus risus. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Enim sed faucibus turpis in eu mi bibendum neque. Varius vel pharetra vel turpis nunc. Integer malesuada nunc vel risus commodo. Turpis nunc eget lorem dolor sed viverra. Varius sit amet mattis vulputate. Sagittis id consectetur purus ut. Integer quis auctor elit sed vulputate mi sit amet mauris. Duis tristique sollicitudin nibh sit amet commodo.</h4>
-          </div>
+
+          <h3><strong>Breakdown</strong></h3>
+
+          <ul >
+            <li class="listCircle">Able to understand the context easily</li>
+            <li class="listCircle"> easily determine where the user is looking/reading </li>
+            <li class="listCircle"> skip or jump to the sections they are interested in </li>
+            <li class="listCircle">revisiting previous sections if desired</li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="Grid Grid--gutters Grid--cols-4 wrapper">
       <div class="Grid-cell">
         <div class="element">
-  
-            <h3><strong>Duration</strong></h3>
-            <h4>June - August 2022 </h4>
-            <h4>10 Hours per week </h4>
-  
+
+          <h3><strong>Duration</strong></h3>
+          <h4>June - August 2022 </h4>
+          <h4>10 Hours per week </h4>
+
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-  
-            <h3><strong>Team</strong></h3>
-            <h4>Concept </h4>
-            <h4>Individual work</h4>
+
+          <h3><strong>Team</strong></h3>
+          <h4>Concept </h4>
+          <h4>Individual work</h4>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-  
-            <h3><strong>Role</strong></h3>
-            <h4>Research</h4>
-            <h4>Visual</h4>
+
+          <h3><strong>Role</strong></h3>
+          <h4>Research</h4>
+          <h4>Visual</h4>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-            <h3><strong>Tool</strong></h3>
-            <h4>Figma</h4>
-            <h4>VS Code</h4>
+          <h3><strong>Tool</strong></h3>
+          <h4>Figma</h4>
+          <h4>VS Code</h4>
         </div>
       </div>
-  
+
     </div>
-  
+
     <nav class="HorizNav">
       <ol class="HorizNavItem">
 
@@ -293,7 +305,7 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">Tag <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">Image <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -319,19 +331,22 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">Tag <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">Note <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
-              <!-- Img -->
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="element">
+                    <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing
+                      elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
 
-              <div class="Grid Grid--full u-textCenter">
-                <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
                   </div>
                 </div>
               </div>
-              <!-- Img -->
+
             </section>
           </section>
           <section id="c1Sc2">
@@ -349,7 +364,7 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">Tag <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">Image <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -375,7 +390,7 @@
               <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
-                  <h2 class="tArrow">Tag <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                  <h2 class="tArrow">Image <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
                 </div>
               </div>
               <!-- Arrow -->
@@ -437,18 +452,25 @@
                         <h4>
                           <p> <strong>Title </strong></p>
                           <ul>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                              incididunt ut labore
                               et dolore magna aliqua. </li>
-                            <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                              nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                            <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                              ea commodo
+                              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                              fugiat
+                              nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                              deserunt
                               mollit anim id est laborum.</li>
                           </ul>
                           <p> <strong>Title </strong></p>
                           <ul>
-                            <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                              nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                            <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                              ea commodo
+                              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                              fugiat
+                              nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                              deserunt
                               mollit anim id est laborum.</li>
                           </ul>
                         </h4>
@@ -459,25 +481,22 @@
                 <div class="blankHM"></div>
               </section>
               <section id="c2Sc12">
+
                 <!-- Arrow -->
                 <div class="wrapper">
                   <div class="element">
-                    <h2 class="tArrow">Tag <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                    <h2 class="tArrow">Note <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
                   </div>
                 </div>
                 <!-- Arrow -->
-                <div class="Grid Grid--gutters Grid--1of3 Grid--center">
-                  <div class="Grid-cell">
+                <div class="Grid-cell">
+                  <div class="element">
                     <div class="element">
-                      <h3>Title</h3>
-                      <ul>
-                        <li>List</li>
-                        <li>...</li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="Grid-cell">
-                    <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
+                      <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                      </p>
+
                     </div>
                   </div>
                 </div>
@@ -489,17 +508,18 @@
                 <!-- Arrow -->
                 <div class="wrapper">
                   <div class="element">
-                    <h2 class="tArrow">Tag <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+                    <h2 class="tArrow">Note <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
                   </div>
                 </div>
                 <!-- Arrow -->
                 <div class="Grid-cell">
                   <div class="element">
                     <div class="element">
-                      <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit, sed
                         do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                       </p>
-            
+
                     </div>
                   </div>
                 </div>
@@ -518,10 +538,12 @@
                       <div class="elementInnerL cardAPPOINTA">
                         <h4> <strong> Title</strong> </h4>
                         <ul>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            ut labore
                             et
                             dolore magna aliqua. </li>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            ut labore
                             et
                             dolore magna aliqua. </li>
                         </ul>
@@ -533,10 +555,12 @@
                       <div class="elementInnerL cardAPPOINTA">
                         <h4> <strong> Title</strong> </h4>
                         <ul>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            ut labore
                             et
                             dolore magna aliqua. </li>
-                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            ut labore
                             et
                             dolore magna aliqua. </li>
                         </ul>
@@ -669,7 +693,7 @@
   <footer class="Grey100Bg">
     <div class="element">
       <div class="footer">
-        <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
+        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
         <div class="footer-right">
           <a href="mailto:vickyw.design@gmail.com">
             <img class="footer-logo" src="../../icon/mail.svg" alt="email">
