--- a/index.html
+++ b/index.html
@@ -337,6 +337,30 @@
         </div>
 
         <div class="Grid-cell">
+          <div class="Grid-cell">
+            <div class="element">
+              <a href="/glorify/">
+                <div class="">
+                  <div class="elementCard float cardBorder GLORIFY shadowBoxLt">
+                    <img src="./image/Cover_Glorify.png" alt="GLORIFY">
+                    <div class="element">
+                      <div class="element">
+                        <h5>For purchase medication</h5>
+                        <h3 class="arrCard" data-aos="fade-up"><strong>LASO RX Zero</strong></h3>
+                        <h4>Elevate medication purchase experience with unlimited access to generics</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2">
+
+
+        <div class="Grid-cell">
           <div class="element">
             <a>
               <div class="elementCard float cardBorder shadowBoxLt">
@@ -369,7 +393,6 @@
           </div>
         </div>
       </div>
-
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
           <div class="element">
