--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <title>Vicky W. | UX Designer </title>
+  <title>Vicky W. | UX Designer for B2B Solutions & Consumer Apps </title>
+
   <link rel="canonical" href="https://vickywang.me/">
   <meta name="author" content="Vicky W.">
-  <meta name="keywords"
-    content="Vicky Wang, UX Design, User Experience Design, User Interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-">
-
+  <meta name="description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Vicky W. | UX Designer | Product Designer">
-  <meta property="og:description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-">
+  <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="og:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
   <meta property="og:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
@@ -28,9 +26,9 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
-  <meta property="twitter:title" content="Vicky W. | UX Designer | Projects">
-  <meta property="twitter:description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-">
+  <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="twitter:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
 
   <!-- favicon -->
@@ -40,98 +38,26 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
-  <!-- Links -->
-  <link rel="stylesheet" href="./main.css">
-  <script type="text/javascript" src="scripts.js"></script>
-  <script type="text/javascript" src="scripts_project.js"></script>
 
 
-
-
-  <!-- Font -->
+  <!-- Google Font Preconnect-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+  <!-- Google Font Preconnect-->
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
     rel="stylesheet">
-  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-  <!--special font-family: 'Train One'; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <!--special font-family: 'Titillium Web', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--special font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - Hi Melody-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - shadows into light-->
-  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - font-family: Maven Pro; -->
-  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: La Belle Aurore; -->
+  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
+  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: 'Caveat'; -->
-  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: 'Caveat Brush', cursive; -->
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <!--handwriting font-family: 'Indie Flower'; -->
-  <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
-  <!--handwriting font-family: 'Zeyada'; -->
+
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-  <!--handwriting font-family: 'Gloria Hallelujah'; -->
-
-
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet">
-  <!--font awesome -->
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-    rel="stylesheet">
-
-  <!--Ubuntu -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--Inter -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <!--Raleway -->
-  <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-
-  <!--Golos Text -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <!-- Nunito Sans -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <!-- Rubik -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <!-- Quicksand -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
-    rel="stylesheet">
-  <!-- Mulish -->
-
+  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
     integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
@@ -155,6 +81,12 @@
 
     gtag('config', 'G-E8YXDWJST2');
   </script>
+
+  <!-- Links -->
+  <link rel="stylesheet" href="./main.css">
+  <script type="text/javascript" src="scripts.js"></script>
+  <script type="text/javascript" src="scripts_project.js"></script>
+
 </head>
 
 <body>
@@ -310,7 +242,7 @@
     <!-- Arrow -->
     <div class="wrapper">
       <div class="element">
-        <h2 class="tArrow">Latest Projects <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
+        <h2 class="tArrow">Case Study <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
       </div>
     </div>
     <!-- Arrow -->
@@ -322,16 +254,16 @@
         <div class="Grid-cell">
           <div class="element">
             <a class="no-hover-effect" href="/glorify/">
-                <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
-                  <img src="./ProjectImages/Cover_Glorify.png" alt="GLORIFY">
+              <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
+                <img src="./ProjectImages/Cover_Glorify.png" alt="GLORIFY">
+                <div class="element">
                   <div class="element">
-                    <div class="element">
-                      <h5>For daily worship</h5>
-                      <h3 class="arrCard" data-aos="fade-up"><strong>GLORIFY</strong></h3>
-                      <h4>Integrating a community experience into the existing Glorify Application</h4>
-                    </div>
+                    <h5>For daily worship</h5>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>GLORIFY</strong></h3>
+                    <h4>Integrating a community experience into the existing Glorify Application</h4>
                   </div>
                 </div>
+              </div>
             </a>
           </div>
         </div>
@@ -412,6 +344,18 @@
         </div>
       </div>
 
+    </div>
+    <div class="blankHS"></div>
+    <!-- Arrow -->
+    <div class="wrapper">
+      <div class="element">
+        <h2 class="tArrow">Design System &#38; Navigation <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
+      </div>
+    </div>
+    <!-- Arrow -->
+    <div class="blankHXS"></div>
+    <div class="wrapper">
+      
 
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
@@ -455,7 +399,6 @@
         </div>
       </div>
     </div>
-
     <div class="blankHS"></div>
     <!-- Arrow -->
     <div class="wrapper">
